<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">500px Wallpaper</string>

    <!-- Settings -->
    <string name="current_photo">Current Photo</string>
    <string name="no_current_photo">No current photo</string>
    <string name="next_photo">Next Photo</string>
    <string name="disabled">Disabled</string>
    <string name="enable_below">You must enable 500px Wallpaper before wallpapers will be set</string>
    <string name="loading">Loading...</string>
    <string name="settings_500px">500px Settings</string>
    <string name="feature">Feature</string>
    <string name="categories">Categories</string>
    <string name="nsfw_title">Allow NSFW Photos</string>
    <string name="nsfw_summary">Show photos that are not suitable for work</string>
    <string name="settings">Settings</string>
    <string name="enable">Enabled</string>
    <string name="enable_summary">Enable 500px Wallpaper to change your wallpaper at the specified interval</string>
    <string name="update_only_over_wifi">Update Only Over Wi-Fi</string>
    <string name="update_only_over_wifi_summary">Only download images using Wi-Fi</string>
    <string name="update_interval">Update Interval</string>
    <string name="parallax">Scroll Wallpaper</string>
    <string name="parallax_summary">Scroll wallpaper when swiping through home screens</string>
    <string name="rate_app">Rate 500px Wallpaper</string>
    <string name="help">Help</string>
    <string name="contact">Contact Developer</string>
    <string name="contact_summary">If you are having problems, click here to contact the developer</string>
    <string name="version">Version</string>

    <!-- Log Reporting -->
    <string name="send_email_via">Send email via</string>

    <!-- History -->
    <string name="history">History</string>

    <!-- Features -->
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="fresh_today">Fresh Today</string>
    <string name="fresh_yesterday">Fresh Yesterday</string>
    <string name="fresh_this_week">Fresh This Week</string>

    <!-- Intervals -->
    <string name="one_minute">1 minute</string>
    <string name="two_minutes">2 minutes</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="one_hour">1 hour</string>
    <string name="two_hours">2 hours</string>
    <string name="three_hours">3 hours</string>
    <string name="six_hours">6 hours</string>
    <string name="twelve_hours">12 hours</string>
    <string name="twenty_four_hours">24 hours</string>

    <!-- Categories -->
    <string name="uncategorized">Uncategorized</string>
    <string name="celebrities">Celebrities</string>
    <string name="film">Film</string>
    <string name="journalism">Journalism</string>
    <string name="nude">Nude</string>
    <string name="black_and_white">Black and White</string>
    <string name="still_life">Still Life</string>
    <string name="people">People</string>
    <string name="landscapes">Landscapes</string>
    <string name="city_and_architecture">City and Architecture</string>
    <string name="abstract_category">Abstract</string>
    <string name="animals">Animals</string>
    <string name="macro">Macro</string>
    <string name="travel">Travel</string>
    <string name="fashion">Fashion</string>
    <string name="commercial">Commercial</string>
    <string name="concert">Concert</string>
    <string name="sport">Sport</string>
    <string name="nature">Nature</string>
    <string name="performing_arts">Performing Arts</string>
    <string name="family">Family</string>
    <string name="street">Street</string>
    <string name="underwater">Underwater</string>
    <string name="food">Food</string>
    <string name="fine_art">Fine Art</string>
    <string name="wedding">Wedding</string>
    <string name="transportation">Transportation</string>
    <string name="urban_exploration">Urban Exploration</string>
</resources>
